--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\davin\\Anaconda3\\envs\\ml_py35\\python.exe"
+    "python.pythonPath": "C:\\tools\\Anaconda3\\envs\\ml_py36\\python.exe"
 }
